# face-compare-app

./: README.md  ai_prompt.md  pyproject.toml
src/face_compare_app/: __init__.py  cli.py  core.py  database.py  exceptions.py  live.py  server.py  utils.py
src/face_compare_app/server/: __init__.py  dependencies.py  main.py  models.py
src/face_compare_app/server/routes/: __init__.py  compare.py  faces.py  live.py  live_compare_ws.py  live_search_ws.py  live_utils.py  search.py
suggestion/: 1.md
templates/: faces_crud_test.html  live_compare_test.html  live_search_test.html
