[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "face-compare-app"
version = "0.1.0"
description = "Face Compare CLI App"
readme = "README.md"
requires-python = "<3.13"
license = "MIT"
keywords = []
authors = [
  { name = "lanseria", email = "zhangchao564265135@hotmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "python-dotenv>=1.1.0",
  "fastapi>=0.115.12",
  "insightface>=0.7.3",
  "onnxruntime>=1.16.3; platform_system == 'Darwin'",
  "onnxruntime-gpu>=1.16.3; platform_system != 'Darwin'",
  "opencv-python-headless>=4.8.0.74",
  "pillow>=11.2.1",
  "uvicorn[standard]>=0.34.2",
  "python-multipart>=0.0.20",
  "Jinja2>=3.1.6",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]
build = [
  "pyinstaller>=6.3.0",
]

[project.scripts]
cli = "face_compare_app.main:app"

# 添加 hatch 包配置
[tool.hatch.packages.find]
include = ["src/*"]
src = "src"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
